--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
   db:
     image: mysql:8.0
     restart: no
+    ports:
+      - 3306:3306
     environment:
       MYSQL_DATABASE: exampledb
       MYSQL_USER: exampleuser
