add optoins to user team or user note

--- a/wp-plugins/cf7-workshop-scheduler/config-sample.json
+++ b/wp-plugins/cf7-workshop-scheduler/config-sample.json
@@ -24,6 +24,8 @@
                 }
             },
             "invoice": true,
+            "team_note": true,
+            "user_note": true,
             "public_note": true,
             "private_note": true
         },
